--- a/templates/current_datetime.html
+++ b/templates/current_datetime.html
@@ -1,5 +1,7 @@
-<html> 
-<body>
-It is now {{ current_date }} :) 
+{% extends "base.html" %}
 
-</body></html>
+{% block title %} The current time {% endblock %}
+
+{% block content %}
+<p> it is now {{ current_date }} :) </p>
+{% endblock %}
